data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1648.wast
;; 9. **Test 9: Complex Nesting with br_if Near Boundary**    - **Description:** A complex nesting of loops and blocks with a `br_if` near the boundary of the outer control structure.    - **Constraint Checked:** Ensuring boundary conditions within control structures are handled correctly.    - **Mismanagement Relation:** Verifying correct stack unwinding and label targeting near the transition between nested structures.

(assert_invalid
  (module 
    (func $complex_nesting_with_br_if
      (block (loop (br_if 1 (i32.const 0)) (br_if 0 (i32.const 1)))
    ))
  "type mismatch"
)